minor edits and styling

--- a/code/mobile.css
+++ b/code/mobile.css
@@ -5,7 +5,7 @@
   }
 
   h2 {
-    font-size: 17px;
+    font-size: 1.1rem;
   }
 
   h4, p {
@@ -39,7 +39,6 @@
     display: block;
     text-align: center;
     padding: 1.5rem 0;
-    
   }
 
   li a {
@@ -55,7 +54,7 @@
   }
 
   .main {
-    padding: 10px;
+    padding: 0.62;
   }
 
   .small {
@@ -64,12 +63,12 @@
 
   .left {
     flex-basis: 40%;
-    height: 90px;
+    height: 6rem;
   }
 
   .right {
     flex-basis: 60%;
-    height: 90px;
+    height: 6rem;
   }
 
   .small-img {
