--- a/code/tablet.css
+++ b/code/tablet.css
@@ -5,7 +5,7 @@
   }
 
   h2 {
-    font-size: 20px;
+    font-size: 1.25rem;
   }
 
   .container {
@@ -31,9 +31,8 @@
 
   .small-img {
     width: 100%;
-    height: 200px;
+    height: 12.5rem;
   }
 
-  
 }
 
