--- a/code/style.css
+++ b/code/style.css
@@ -17,7 +17,15 @@ a {
   color: inherit;
 }
 
+h1,h2,h3,h4,h5,h6 {
+  margin: 0;
+  padding: 0;
+}
 
+p {
+  margin: 0;
+  padding: 0;
+}
 
 /* - - - LOGO AND NAVBAR - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  - - - - */
 
@@ -88,20 +96,23 @@ a {
 
 .article-content h1 {
   font-family: 'Libre Caslon Text', serif;
-  font-size: 1.1rem;
+  font-size: 1.2rem;
+  padding: 3px 0 0 0;
+  font-weight: 700;
 }
 
 .article-content p {
   font-family: 'Source Sans Pro', sans-serif;
-}
-
-.article-picture {
+  font-size: 0.9rem;
+  padding: 5px 0 0 0;
 }
 
 .article-picture img {
   max-width: 100%;
   width: 100%;
   max-height: 400px;
+  height: 100px;
+  min-width: 100px;
   object-fit: cover;
 }
 
@@ -110,13 +121,17 @@ a {
 
 .article--featured h1 {
   font-size: 1.8rem;
+  padding: 4px 0 0 0;
+  font-weight: 700;
 }
 
+.article--featured img {
+  min-height: 250px;
+}
 
-
-
-
-
+.article--featured .article-content p {
+  max-width: 90%;
+}
 
 
 /* - - - MOBILE MEDIA QUERIES - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
@@ -124,11 +139,15 @@ a {
 @media (max-width:667px) {
 
   body {
-    padding: 0 10px;
+    padding: 0 5px;
+  }
+
+  .header {
+    padding: 10px 10px 2px 10px;
   }
 
   .site-logo {
-    padding-left: 5px;
+    padding-left: 10px;
   }
 
   .site-name {
@@ -144,20 +163,29 @@ a {
     flex-direction: row;
   }
 
+  .article-picture {
+    width: 30%;
+  }
+  
+  .article-content h1 {
+    padding: 2px 0 0 0;
+  }
+
   .article--regular .article-content {
     padding-left: 10px;
   }
-  
+
   .article--featured {
     flex-direction: column;
-  }
-
-  .article-picture {
-    width: 30%;
+    padding-bottom: 5px;
   }
 
   .article--featured .article-picture {
     width: 100%;
+  }
+
+  .article--featured .article-content p {
+    max-width: 95%;
   }
    
 }
@@ -183,6 +211,13 @@ a {
     grid-column: span 2;
   }
 
+  .article-picture img {
+    height: 220px;
+  }
+
+  .article--featured img {
+    min-height: 375px;
+  }
 }
 
 
@@ -207,12 +242,32 @@ a {
     align-items: flex-end;
   }
 
+  .article-content p {
+    font-size: 1rem;
+  }
+
   .article--featured {
     grid-column: span 4;
+    
   }
 
   .article--featured h1 {
-    font-size: 2.6rem;
+    font-size: 2.5rem;
+    padding-top: 10px;
   }
+
+  .article--featured p {
+    font-size: 1.1rem;
+  }
+
+  .article--featured img {
+    min-height: 400px;
+  }
+
+  .article--regular img {
+    max-height: 180px;
+    max-width: 220px;
+  }
+
 
 }
