--- a/code/style.css
+++ b/code/style.css
@@ -248,7 +248,6 @@ p {
 
   .article--featured {
     grid-column: span 4;
-    
   }
 
   .article--featured h1 {
@@ -262,6 +261,7 @@ p {
 
   .article--featured img {
     min-height: 400px;
+    object-position: bottom center; 
   }
 
   .article--regular img {
