--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,261 @@
-html {
-  background: #0025ff;
-  color: #fff;
+/*MOBILE*/
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(248, 250, 250);
+}
+
+h1 {
+  margin: 0;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+h3 {
+  margin: 0;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+/*HEADER*/
+
+.header {
+  background-color: rgb(255, 255, 255);
+  margin: 10px;
+  padding: 10px;
+  display: flex;
+  box-shadow: 1px 1px 5px lightgrey;
+  border-radius: 3px;
+}
+
+.header-logo {
+  align-items: center;
+  justify-content: center;
+  width: 20%;
+  display: flex;
+}
+
+.logo-image {
+  width: 130px;
+}
+
+.header-menu {
+  display: flex;
+  width: 80%;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.header-menu-link {
+  display: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+
+a:hover {
+  color: #C8ABAB;
+}
+
+.header-menu-image {
+  display: block;
+  width: 30px;
+  height: 30px;
+  background-image: url('https://img.icons8.com/ios-glyphs/344/menu--v1.png');
+  background-size: 100%;
+}
+
+.search {
+  border: 1px solid grey;
+  border-radius: 3px;
+  height: 14px;
+  width: 70px;
+  padding: 5px 10px 5px 10px;
+  outline: 0;
+  background-color: #f5f5f5;
+  margin: 0 40px 0 40px;
+}
+
+/*ARTICLE*/
+
+.big-article {
+  background-color: rgb(255, 255, 255);
+  margin: 10px;
+  box-shadow: 1px 1px 5px lightgrey;
+  border-radius: 3px;
+}
+
+.big-image {
+  width: 100%;
+  max-height: 200px;
+  object-fit: cover;
+}
+
+.head-news {
+  justify-content: center;
+  margin: 30px 30px 30px 30px;
+  padding-bottom: 30px;
+}
+
+.head-news p {
+  font-size: 15px;
+}
+
+.head-title {
+  font-weight: bold;
+}
+
+/*NEWS*/
+
+.news {
+  margin: 10px;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 14px;
+  justify-content: center;
+  font-size: 13px;
+}
+
+.button {
+  background-color: rgb(239, 240, 241);
+  border: none;
+  color: rgb(14, 5, 5);
+  padding: 5px 5px;
+  border-radius: 3px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+}
+
+.grid-item {
+  background-color: rgb(255, 255, 255);
+  padding: 15px;
+  box-shadow: 1px 1px 5px lightgrey;
+  border-radius: 3px;
+}
+
+.grid-item h3 {
+  margin: 20px 0 4px 0;
+}
+
+.grid-item-image {
+  width: 100%;
+}
+
+/*FOOTER*/
+
+.footer {
+  background-color: rgb(255, 255, 255);
+  /*border:3px solid;*/
+  margin: 10px;
+  display: flex;
+  box-shadow: 1px 1px 5px lightgrey;
+}
+
+.footer-menu-link {
+  padding: 12px;
+  font-size: 10px;
+  font-weight: bold;
+  color: rgb(70, 79, 87);
+}
+
+/*TABLET*/
+
+@media(min-width:667px) and (max-width:1024px) {
+  .header {
+    margin: 10px 50px 10px 50px;
+  }
+
+  /*ARTICLE*/
+
+  .big-article {
+    display: flex;
+    justify-content: center;
+    margin: 10px 50px 10px 50px;
+  }
+
+  .big-image {
+    max-height: 50%;
+    max-width: 50%;
+    margin: 30px 3px 30px 30px;
+  }
+
+  .head-news {
+    width: 50%;
+  }
+
+  /*NEWS*/
+
+  .news {
+    grid-template-columns: repeat(2, 1fr);
+    margin: 10px 50px 10px 50px;
+  }
+
+  .footer {
+    margin: 10px 50px 10px 50px;
+  }
+
+  .footer-menu-link {
+    padding: 15px;
+    font-size: 12px;
+  }
+}
+
+/*DESKTOP*/
+
+@media(min-width:1025px) {
+  .header {
+    margin: 10px 150px 10px 150px;
+  }
+
+  .header-menu-link {
+    display: block;
+    padding: 20px;
+    font-size: 15px;
+    font-weight: bold;
+    color: rgb(70, 79, 87);
+  }
+
+  .header-menu-image {
+    display: none;
+  }
+
+  /*ARTICLE*/
+
+  .big-article {
+    margin: 10px 150px 10px 150px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .big-image {
+    margin: 50px 5px 50px 50px;
+    max-width: 50%;
+    max-height: 100%;
+  }
+
+  .head-news {
+    font-size: 35px;
+    margin: 50px 50px 50px 50px;
+    width: 50%;
+  }
+
+  /*NEWS*/
+  
+  .news {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 15px;
+    margin: 10px 150px 10px 150px;
+  }
+
+  .footer {
+    margin: 10px 150px 10px 150px;
+  }
+
+  .footer-menu-link {
+    padding: 20px;
+    font-size: 15px;
+    font-weight: bold;
+    color: rgb(70, 79, 87);
+  }
 }
