--- a/code/style.css
+++ b/code/style.css
@@ -5,10 +5,14 @@ röd: #F94204;
 rosa: #FF5C8A;
 blå: #69C1DF;
 rosa2: #FF7AA0;
+grey-logo: #454241fc;
+red-logo: ab4c49;
+blue-logo: #acbdbe;
+
 */
 
 html {
-  background: #78c0a8;
+  background: #6c9395;
   color: #fff;
 }
 
@@ -21,29 +25,27 @@ html {
   grid-template-columns: repeat(8, 1fr);
 }
 .text h1{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 40px;
   display:none;
 }
 
-.top h1{
+/* .top h1{
   color:gray;
-}
+} */
 
 .top h2{
   font-size: small;
 }
 
 .top{
-  background-color:#FF5C8A;
+  background-color: #454241fc;
   grid-column: span 2;
 }
 .logo-image{
-  max-width: 30px;
-  max-height: 30px;
+  max-width: 120px;
+  max-height: 120px;
 }
 .top button{
-  background-color:#F94204; /* same as background */
+  background-color: #acbdbe; /* same as background */
   border: none;
   color: white;
   padding: 2px 2px;
@@ -57,8 +59,10 @@ html {
  
 }
   .top button:hover {
-    background-color:#69C1DF; /* Green */
+    background-color:#6c9395; 
     color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: small;
   }
 
   .navbar img{
@@ -75,7 +79,6 @@ html {
 }
 .navbar {
   grid-column: span 4;
-  background-color:#FF5C8A;
   display: flex;
   justify-content: right;
   align-items: end;
@@ -97,7 +100,7 @@ a:hover {
 
 .big-news-section{
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-border: 2px solid green;
+/* border: 2px solid green; */
 width: auto;
 height: auto;
 display: flex;
@@ -135,8 +138,9 @@ align-items: center;
 
 .tiny-news-wrapper{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
   display: flex;
+  background-color: white;
   flex-direction: column;
   align-items: center;
 }
@@ -167,10 +171,10 @@ align-items: center;
 @media (min-width: 667px) and (max-width: 1024px) {
   /*header text*/
   .text h1{
-    
     font-size: 20px;
     display:grid;
-    color:#F78409;
+    color:#f59631;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 
   .big-news-section{
@@ -179,14 +183,12 @@ align-items: center;
     flex-wrap: wrap;
     justify-content: center;
     font-size: 13px;
-    padding: 5px;
-
   }
 
   .big-news{
   width: 297px;
-  min-height: 300px;
-  padding: 5px;
+  height: 300px;
+/*   padding: 5px; */
 
   }
 
@@ -216,7 +218,8 @@ align-items: center;
   .text h1{
     font-size: 35px;
     display:grid;
-    color:#F78409;
+    color:#f59631;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 
 
@@ -242,7 +245,7 @@ max-width: auto;
 justify-content: right;
 align-items: flex-end;
 grid-column: span 8;
-background-color: #F94204;
+background-color: #acbdbe;
 }
 
 
@@ -259,10 +262,14 @@ grid-column: span 7;
 .top input{
 display: flex;
 min-width: 300px;
+padding : 7px 2px
 }
 
 .navbar h2{
   display:inline;
+  font-size: 10px;
+  font-family: 'verdana';
+  padding: 8px 0px 8px 8px;
 }
 
 .navbar-search button{
