--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,412 @@
-html {
-  background: #0025ff;
-  color: #fff;
+
+body {
+  margin: 0; 
+  box-sizing: border-box;
+  font-family:'Manrope'
 }
+
+
+    /**** Header and navbar ****/
+
+
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image:url(https://images.unsplash.com/photo-1488806374796-a4071c52353b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80);
+  background-size: cover;
+  background-position: center;
+  padding: 3%;
+ }
+
+.name a {
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 47px;
+  color: #8adb8ec9;
+  letter-spacing: 3px;
+  text-shadow: 0 0 5px black;
+}
+
+.menu {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  gap: 15px;
+}
+
+.menu-item a {
+  letter-spacing: 0;
+  color: black;
+  font-size: 15px;
+  font-weight:bold;
+  text-transform: uppercase;
+  margin: 10%;
+  padding: 10%;
+  text-shadow: 0 0 5px white;
+}
+
+.menu-item a:hover,
+.menu-item a:active {
+  color: #8adb8ec9;
+}
+
+
+    /** Search button**/
+
+
+.search-field {
+  display: flex;
+  width: 180px;
+  height: 37px;
+  border-radius: 30px;
+  margin: 4%;
+  background: #fff;
+  transition: all 0.3s ease;
+  box-shadow: 0 3px 5px rgb(0 0 0 / 50%);
+  flex-direction: row-reverse;
+  justify-content: flex-end;
+}
+
+.search-input {
+  border: none;
+  background: none;
+  cursor: pointer;
+  outline: none;
+}
+
+.search-button {
+  padding: 10px;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+
+   /**** Big news ****/
+
+.big-news {
+  display: flex;
+  flex-direction: column;
+  margin: 5%;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.big-image {
+  object-fit: cover;
+  width: 100%;
+  height: 61vw;
+}
+
+.big-news-text {
+  display: flex;
+  flex-direction: column;
+  padding-top: 2%;
+}
+
+.big-news h3 {
+  font-size: 1rem;
+  margin: 0 0 10px 0;
+}
+
+.big-news-text p, .hidden-paragraph, .desktop-button {
+ display:none;
+}
+
+
+   /**** The other small news ****/
+
+.small-news-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 20px;
+  margin: 5%;
+}
+
+h5 {
+  font-size: 12px;
+  text-transform: uppercase;
+}
+
+p {
+  font-size: 10px;
+  text-transform: uppercase;
+}
+
+.small-images {
+  object-fit: cover;
+  width: 100%;
+  height: 32vw;
+}
+
+.big-image, .small-images {
+  box-shadow: 8px 8px 4px lightgrey;
+  border-radius: 4%;
+}
+
+.big-image:hover,.small-images:hover {
+  opacity: 70%;
+}
+
+  /** Footer **/
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #8adb8ec9;
+  padding: 1%;
+}
+
+.social, .email-info {
+  border: none;
+  background: none;
+  padding: 3px;
+}
+
+.newsletter {
+  border: 1px solid black;
+  padding: 2px 15px;
+  border-radius: 20px;
+  box-shadow: 0 5px 15px rgb(0 0 0 / 70%);
+  margin: 5px;
+}
+
+
+  /**** Media queries ****/
+
+
+      /** Tablet **/
+
+
+@media (min-width: 667px) and (max-width: 1024px) {
+
+        /** Header and navbar **/
+
+  header {
+    flex-direction: row;
+    padding: 23px;
+  }
+  
+  .name a {
+    font-size: 50px;
+  }
+
+  .menu {
+    flex-direction: column;
+    gap: 1px;
+  }
+
+  .menu-item a {
+    font-size: 19px;
+  }
+
+        /** Big news content **/
+
+  .big-news {
+    flex-direction: row;
+    align-items: center;
+    margin: 4%
+  }
+
+  .big-news-article {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .big-news-text {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+   width: 35%;
+  }
+
+  .big-image {
+    width: 100%;
+    height: 45vw;
+    object-fit: cover;
+  }
+
+  .big-news-text p {
+    all: unset;
+    font-size: 14px;
+    line-height: 2;
+    margin-bottom: 25px;
+  }
+  
+  .hidden-paragraph {
+    display:none;
+  }
+  
+
+        /** Small news content **/
+
+
+  .small-news-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 4%;
+  }
+
+  .small-images {
+    object-fit: cover;
+    width: 100%;
+    height:40vw;
+  }
+
+  h5 {
+    font-size: 13px;
+  }
+  
+  p {
+    font-size: 11px;
+  }
+  
+
+}
+
+@media (min-width: 1025px) {
+
+
+        /** Header and navbar **/
+
+
+  header {
+     flex-direction: row;
+     padding: 1%;
+  }
+        
+  .name a {
+    font-size: 70px;
+  }
+        
+  .menu {
+    flex-direction: row;
+    gap: 20px;
+    margin-left: 1%;
+  }
+
+  .menu a {
+    font-size: 18px;
+    margin-left: 10px;
+  }
+
+        /** Search button **/
+
+  .search-field {
+   margin-left: 10%;
+  }      
+
+
+         /** Big news content **/
+    
+
+  .big-news {
+    margin: 4% 11% 4% 4%;
+  }
+
+  .big-news-article {
+    display: flex;
+  }
+
+  .big-news-text {
+    display: flex;
+    flex-direction: column;
+    padding: 2%;
+    width: 50%;
+  }
+
+  .big-news-text p {
+    all: unset;
+    font-size: 15px;
+    line-height: 2;
+    padding-top: 4%;
+  }
+
+  .big-news h3 {
+    font-size: 25px;
+    margin: 0 0 10px 0;
+  }
+
+  .big-image {
+    object-fit: cover;
+    width: 100%;
+    height: 25vw;
+  }
+
+  .hidden-paragraph {
+    all: unset;
+    color: black;
+    size: 15px;
+    line-height: 2;
+    padding-top: 4%;
+  }
+  
+
+        /** Desktop button **/
+
+
+  .desktop-button {
+    all: unset;
+    font-size: 14px;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: black;
+    background-color: rgba(149, 206, 127, 0.795);
+    border-radius: 20px;
+    border-color: grey;
+    box-shadow: 0 3px 5px rgb(0 0 0 / 50%);
+    text-align: center;
+    padding: 2%;
+    margin: 9%;
+    width: 53%;
+    background-image: linear-gradient(-10deg, transparent, beige, transparent);
+    cursor: pointer;
+  }
+
+  .desktop-button:hover {
+    animation-name: scale;
+    animation-duration: 0.8s;
+  }
+
+  @keyframes scale {
+   50%{
+    transform: scale(1.2); 
+  } 100% {
+    transform: scale(1);
+  }
+  }
+
+
+       /** Small news content **/
+       
+
+  .small-news-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin: 4%;
+  }
+      
+  .small-images {
+    object-fit: cover;
+    width: 100%;
+    height: 30vw;
+  }
+
+  h5 {
+    font-size: 15px;
+  }
+  
+  p {
+    font-size: 13px;
+  }
+  
+
+}
+
+      
+
