--- a/code/style.css
+++ b/code/style.css
@@ -77,8 +77,16 @@ html {
   margin: 2px 10px;
   width: 70px;
   height: 20px;
+  border-radius: 0.5rem;
+  font-family: $font-body;
   display:none;
 }
+
+/*This makes the blue border disappear when the form is active*/
+input:focus, textarea {
+  outline: none !important;
+} 
+
 .navbar {
   grid-column: span 4;
   display: flex;
@@ -174,7 +182,7 @@ h3{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   /* border: 2px solid blue; */
   display: flex;
-  background-color: white;
+  background-color: rgb(244, 244, 220);
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -207,7 +215,8 @@ h3{
 
   .big-news-section{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background:#acbdbe;
+    /* background:#acbdbe; */
+    background: rgb(244, 244, 220);
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -290,7 +299,7 @@ h3{
 
 .big-news-section{
   flex-direction: row;
-  background-color: white;
+  background-color: rgb(244, 244, 220);
   justify-content: center;
   min-width: 1025px;
 
@@ -360,9 +369,7 @@ padding : 7px 2px
 }
   
 .tiny-news{
-  max-width: 20%;
-/*   padding: 10px;
-  margin: 10px; */
+  max-width: 21%;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -377,12 +384,7 @@ padding : 7px 2px
 }
 
 .footer-wrapper{
-
-  background-color: #f59631;
-    min-height: 20px;
-    padding: 1rem;
-    background: #8a8a8a;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    width: 100%;
+    height: auto; 
+    text-align: center; 
   }
